# go-svg

./: .gitignore  CMakeLists.txt  README.md  context.go  go.mod  go.sum  render_buf.go  svg.go  svg_test.go
data/: us-interstate-duplex-5
libs/: svg_api.h
src/: CMakeLists.txt  svg_api.cc  svg_api.h  test.cc
