
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB csvg_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB csvg_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(csvg STATIC
            ${csvg_HEADER_FILES}
            ${csvg_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(csvg PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${csvg_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${csvg_HEADER_FILES})

SET_TARGET_PROPERTIES(csvg
                    PROPERTIES PUBLIC_HEADER "${headers}")




# ADD_EXECUTABLE(test test.cc)

IF(UNIX AND NOT APPLE)
TARGET_LINK_LIBRARIES(test -Wl,--start-group csvg ${FLYWAVE_LIBRARY_DEPES} -Wl,--end-group)
# ELSE()
# TARGET_LINK_LIBRARIES(test csvg ${FLYWAVE_LIBRARY_DEPES})
ENDIF()
